--- a/views/ethan.ejs
+++ b/views/ethan.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header.ejs %>
 
 <h1>Ethan Seifried</h1>
-<p>Ethan is the youngest out of the seifried children. Despite his diagnosis of type one diabetes at the age of 14 he is extreamly active, he plays on three hockey teams, lacross and also does boxing to stay in shape. Ethan wants to play video games as his full time job.</p>
+<p>Ethan is the youngest out of the Seifried children. Despite his diagnosis of type one diabetes at the age of 14 he is up beat, plays on three hockey teams, lacross and also does boxing to stay in shape. Ethan wants to play video games as his full time job.</p>
 
 <% include ./partials/footer.ejs %>
