--- a/views/brenda.ejs
+++ b/views/brenda.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header.ejs %>
 
 <h1>Brenda Seifried</h1>
-<p>Brenda is mother to Mathew, Racheal, Ethan and step mother to David and Ryan. She takes care of the farm's horses and various other animals including her pet <a href="https://instagram.fyzd1-1.fna.fbcdn.net/t51.2885-15/e35/16124186_1408718472492603_5865807943349305344_n.jpg" title="Picture of the pig">pot belly pig</a> that lives inside the house like he is one of the dogs.</p>
+<p>Brenda is mother to Mathew, Racheal, Ethan and step mother to David and Ryan. She takes care of the farm's horses and various other animals including her pet <a href="https://instagram.fyzd1-1.fna.fbcdn.net/t51.2885-15/e35/16124186_1408718472492603_5865807943349305344_n.jpg" title="Picture of the pig">pot belly pig</a> that lives inside the house like a dog.</p>
 
 <% include ./partials/footer.ejs %>
